--- a/main.html
+++ b/main.html
@@ -8,16 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="container">
-	    <div id="three" class="box">3</div>
-		<div id="four" class="box">4</div>
-		<div id="five" class="box">5</div>
-		<div id="six" class="box">6</div>
-		<div id="sevan" class="box">7</div>
-		<div id="one" class="box">1</div>
-		<div id="two" class="box">2</div>
+	       <div id="holder">
+     <div id="three" class="box">3</div>
+     <div id="four" class="box">4</div>
+     <div id="five" class="box">5</div>
+     <div id="six" class="box">6</div>
+     <div id="seven" class="box">7</div>
+     <div id="one" class="box">1</div>
+     </div>
+     <div id="two" class="box">2</div>
+    
 		
-	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
