--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	       <div id="holder">
+	       <div class="holder">
      <div id="three" class="box">3</div>
      <div id="four" class="box">4</div>
      <div id="five" class="box">5</div>
